Font page backbone

--- a/style.scss
+++ b/style.scss
@@ -249,6 +249,25 @@ nav {
   }
 }
 
+.main-name {
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+
+.main-link {
+  font-size: 30px;
+  text-align: left;
+}
+
+.main-descrip {
+  text-align: right;
+}
+
+.main-para {
+  margin-top: 50px;
+  font-size: 15px
+}
+
 //
 // .main
 //
