--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,11 +23,12 @@
     </div>
 
     <div id="main" role="main" class="container">
+      <!-- 
       <div class="row center-xs">
           <div class="col-xs-6">
               <div class="box"><div class="main-name">Kai Yi LEE</div></div>
           </div>
-      </div>
+      </div> 
       <div class="row center-xs middle-xs">
           <div class="col-xs-6">
               <div class="box"><div class="main-descrip">builds</div></div>
@@ -59,7 +60,54 @@
           <div class="col-xs-6">
               <div class="box"><div class="main-link">contactable</div></div>
           </div>
+      </div> -->
+
+      <div class="main-container">
+        <div class="row center-xs">
+          <div class="col-xs-12">
+              <div class="box"><div class="main-name">Kai Yi LEE</div></div>
+          </div>
+        </div>
+        <div class="row left-xs">
+          <div class="col-cus-left">
+          </div>
+          <div class="col-cus-right"> 
+            <div class="box">
+              <span class="main-descrip">
+                builds
+              </span>
+              <span class="main-link">
+                software
+              </span>
+            </div>
+            <div class="box">
+              <span class="main-descrip">
+                hacks
+              </span>
+              <span class="main-link">
+                hardware
+              </span>
+            </div>
+            <div class="box">
+              <span class="main-descrip">
+                writes a
+              </span>
+              <span class="main-link">
+                blog
+              </span>
+            </div>
+            <div class="box">
+              <span class="main-descrip">
+                is easily
+              </span>
+              <span class="main-link">
+                contactable
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
+
       <div class="row center-xs middle-xs">
           <div class="col-xs-6">
               <div class="box">
