--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,62 @@
 /* BASE RULES */
 /**************/
 
+@media only screen and (min-width:700px){
+  .col-cus-left {
+    -ms-flex-preferred-size:38%;
+    flex-basis:38%;
+    max-width:38%
+  }
+
+  .col-cus-right{
+    -ms-flex-preferred-size:62%;
+    flex-basis:62%;
+    max-width:62%
+  }
+}
+
+@media only screen and (max-width:699px){
+  .col-cus-left {
+    -ms-flex-preferred-size:35%;
+    flex-basis:35%;
+    max-width:35%
+  }
+
+  .col-cus-right{
+    -ms-flex-preferred-size:65%;
+    flex-basis:65%;
+    max-width:65%
+  }
+}
+
+@media only screen and (max-width:550px){
+  .col-cus-left {
+    -ms-flex-preferred-size:30%;
+    flex-basis:30%;
+    max-width:30%
+  }
+
+  .col-cus-right{
+    -ms-flex-preferred-size:70%;
+    flex-basis:70%;
+    max-width:70%
+  }
+}
+
+@media only screen and (max-width:450px){
+  .col-cus-left {
+    -ms-flex-preferred-size:20%;
+    flex-basis:20%;
+    max-width:20%
+  }
+
+  .col-cus-right{
+    -ms-flex-preferred-size:80%;
+    flex-basis:80%;
+    max-width:80%
+  }
+}
+
 html {
   font-size: 100%;
   position: relative;
@@ -251,22 +307,26 @@ nav {
 
 .main-name {
   font-size: 50px;
-  margin-bottom: 30px;
+  margin-bottom: 1em;
 }
 
 .main-link {
-  font-size: 30px;
-  text-align: left;
+  font-size: 25px;
+  font-weight: bold;
+  color: darkseagreen;
 }
 
 .main-descrip {
-  text-align: right;
 }
 
 .main-para {
-  margin-top: 50px;
+  margin-top: 8em;
   font-size: 15px
 }
+
+// .main-container {
+//   width: 400px;
+// }
 
 //
 // .main
