Add links and animation

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -65,10 +65,10 @@
       <div class="main-container">
         <div class="row center-xs">
           <div class="col-xs-12">
-              <div class="box"><div class="main-name">Kai Yi LEE</div></div>
+              <div class="box"><div class="main-name">Kai Yi <span id="surname">LEE</span></div></div>
           </div>
         </div>
-        <div class="row left-xs">
+        <div class="row left-xs middle-xs">
           <div class="col-cus-left">
           </div>
           <div class="col-cus-right"> 
@@ -77,7 +77,7 @@
                 builds
               </span>
               <span class="main-link">
-                software
+                <a href="/software" class="btn btn-cus">software</a>
               </span>
             </div>
             <div class="box">
@@ -85,7 +85,7 @@
                 hacks
               </span>
               <span class="main-link">
-                hardware
+                <a href="/hardware" class="btn btn-cus">hardware</a>
               </span>
             </div>
             <div class="box">
@@ -93,7 +93,7 @@
                 writes a
               </span>
               <span class="main-link">
-                blog
+                <a href="http://blog.kaiyilee.com" class="btn btn-cus">blog</a>
               </span>
             </div>
             <div class="box">
@@ -101,7 +101,8 @@
                 is easily
               </span>
               <span class="main-link">
-                contactable
+                <a href="mailto:kaiyi.lee@u.nus.edu?Subject=Contact%20from%20your%20site" target="_top" 
+                class="btn btn-cus">contactable</a>
               </span>
             </div>
           </div>
@@ -109,7 +110,7 @@
       </div>
 
       <div class="row center-xs middle-xs">
-          <div class="col-xs-6">
+          <div class="col-xs-12">
               <div class="box">
                 <div class="main-para">
                   <div>in case you were looking, here is his</div>
