--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Judson" rel="stylesheet">
 
   </head>
 
