Change font hover

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -79,7 +79,7 @@
                 builds
               </span>
               <span class="main-link">
-                <a href="/software" class="btn btn-cus">software</a>
+                <a href="/software" class="btn btn-cus btn-1">software</a>
               </span>
             </div>
             <div class="box">
@@ -87,7 +87,7 @@
                 hacks
               </span>
               <span class="main-link">
-                <a href="/hardware" class="btn btn-cus">hardware</a>
+                <a href="/hardware" class="btn btn-cus btn-2">hardware</a>
               </span>
             </div>
             <div class="box">
@@ -95,7 +95,7 @@
                 writes a
               </span>
               <span class="main-link">
-                <a href="http://blog.kaiyilee.com" class="btn btn-cus">blog</a>
+                <a href="http://blog.kaiyilee.com" class="btn btn-cus btn-3">blog</a>
               </span>
             </div>
             <div class="box">
@@ -104,7 +104,7 @@
               </span>
               <span class="main-link">
                 <a href="mailto:kaiyi.lee@u.nus.edu?Subject=Contact%20from%20your%20site" target="_top" 
-                class="btn btn-cus">contactable</a>
+                class="btn btn-cus btn-4">contactable</a>
               </span>
             </div>
           </div>
