--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,6 +9,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
@@ -111,6 +112,12 @@
         </div>
       </div>
 
+      <div class="row center-xs middle-xs container-elip">
+        <div class="col-xs-12">
+          <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+        </div>
+      </div>
+
       <div class="row center-xs middle-xs">
           <div class="col-xs-12">
               <div class="box">
@@ -122,6 +129,17 @@
           </div>
       </div>
     </div>
+
+    <!-- <div class="wrapper-footer">
+      <div class="container">
+        <footer class="footer">
+          <div class="main-para">
+            <div>in case you were looking, here is his</div>
+            <div>resume, linkedin, and github</div>
+          </div>
+        </footer>
+      </div>
+    </div> -->
 
     {% include analytics.html %}
   </body>
