Add links to footer

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -112,34 +112,27 @@
         </div>
       </div>
 
-      <div class="row center-xs middle-xs container-elip">
+      <!-- <div class="row center-xs middle-xs container-elip">
         <div class="col-xs-12">
           <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
         </div>
-      </div>
-
-      <div class="row center-xs middle-xs">
-          <div class="col-xs-12">
-              <div class="box">
-                <div class="main-para">
-                  <div>in case you were looking, here is his</div>
-                  <div>resume, linkedin, and github</div>
-                </div>
-              </div>
-          </div>
-      </div>
+      </div> -->
     </div>
 
-    <!-- <div class="wrapper-footer">
+    <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
           <div class="main-para">
             <div>in case you were looking, here is his</div>
-            <div>resume, linkedin, and github</div>
+            <div>
+              <a class="footer-links" href="/resume" class="">resume</a>, 
+              <a class="footer-links" href="https://www.linkedin.com/in/kai-yi-lee-89988785/">linkedin</a>, and 
+              <a class="footer-links" href="https://github.com/kaiyisg">github</a>
+            </div>
           </div>
         </footer>
       </div>
-    </div> -->
+    </div>
 
     {% include analytics.html %}
   </body>
