Fix resume link

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -26,45 +26,6 @@
     </div>
 
     <div id="main" role="main" class="container">
-      <!-- 
-      <div class="row center-xs">
-          <div class="col-xs-6">
-              <div class="box"><div class="main-name">Kai Yi LEE</div></div>
-          </div>
-      </div> 
-      <div class="row center-xs middle-xs">
-          <div class="col-xs-6">
-              <div class="box"><div class="main-descrip">builds</div></div>
-          </div>
-          <div class="col-xs-6">
-              <div class="box"><div class="main-link">software</div></div>
-          </div>
-      </div>
-      <div class="row center-xs middle-xs">
-          <div class="col-xs-6">
-              <div class="box"><div class="main-descrip">hacks</div></div>
-          </div>
-          <div class="col-xs-6">
-              <div class="box"><div class="main-link">hardware</div></div>
-          </div>
-      </div>
-      <div class="row center-xs middle-xs">
-          <div class="col-xs-6">
-              <div class="box"><div class="main-descrip">writes a</div></div>
-          </div>
-          <div class="col-xs-6">
-              <div class="box"><div class="main-link">blog</div></div>
-          </div>
-      </div>
-      <div class="row center-xs middle-xs">
-          <div class="col-xs-6">
-              <div class="box"><div class="main-descrip">and is readily</div></div>
-          </div>
-          <div class="col-xs-6">
-              <div class="box"><div class="main-link">contactable</div></div>
-          </div>
-      </div> -->
-
       <div class="main-container">
         <div class="row center-xs">
           <div class="col-xs-12">
@@ -111,12 +72,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="row center-xs middle-xs container-elip">
-        <div class="col-xs-12">
-          <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-        </div>
-      </div> -->
     </div>
 
     <div class="wrapper-footer">
@@ -125,7 +80,7 @@
           <div class="main-para">
             <div>in case you were looking, here is his</div>
             <div>
-              <a class="footer-links" href="/resume" class="">resume</a>, 
+              <a class="footer-links" href="/resume.pdf" class="">resume</a>, 
               <a class="footer-links" href="https://www.linkedin.com/in/kai-yi-lee-89988785/">linkedin</a>, and 
               <a class="footer-links" href="https://github.com/kaiyisg">github</a>
             </div>
