--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,94 +1,74 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
+---
+layout: default
+---
 
-    {% include meta.html %}
+<div class="wrapper-masthead">
+  <div class="container">
+    <header class="masthead clearfix">
+    </header>
+  </div>
+</div>
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Judson" rel="stylesheet">
-
-  </head>
-
-  <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-        </header>
+<div id="main" role="main" class="container">
+  <div class="main-container">
+    <div class="row center-xs">
+      <div class="col-xs-12">
+          <div class="box"><div class="main-name">Kai Yi <span id="surname">LEE</span></div></div>
       </div>
     </div>
-
-    <div id="main" role="main" class="container">
-      <div class="main-container">
-        <div class="row center-xs">
-          <div class="col-xs-12">
-              <div class="box"><div class="main-name">Kai Yi <span id="surname">LEE</span></div></div>
-          </div>
+    <div class="row left-xs middle-xs">
+      <div class="col-cus-left">
+      </div>
+      <div class="col-cus-right"> 
+        <div class="box">
+          <span class="main-descrip">
+            builds
+          </span>
+          <span class="main-link">
+            <a href="/software" class="btn btn-cus btn-1">software</a>
+          </span>
         </div>
-        <div class="row left-xs middle-xs">
-          <div class="col-cus-left">
-          </div>
-          <div class="col-cus-right"> 
-            <div class="box">
-              <span class="main-descrip">
-                builds
-              </span>
-              <span class="main-link">
-                <a href="/software" class="btn btn-cus btn-1">software</a>
-              </span>
-            </div>
-            <div class="box">
-              <span class="main-descrip">
-                hacks
-              </span>
-              <span class="main-link">
-                <a href="/hardware" class="btn btn-cus btn-2">hardware</a>
-              </span>
-            </div>
-            <div class="box">
-              <span class="main-descrip">
-                writes a
-              </span>
-              <span class="main-link">
-                <a href="http://blog.kaiyilee.com" class="btn btn-cus btn-3">blog</a>
-              </span>
-            </div>
-            <div class="box">
-              <span class="main-descrip">
-                is easily
-              </span>
-              <span class="main-link">
-                <a href="mailto:kaiyi.lee@u.nus.edu?Subject=Contact%20from%20your%20site" target="_top" 
-                class="btn btn-cus btn-4">contactable</a>
-              </span>
-            </div>
-          </div>
+        <div class="box">
+          <span class="main-descrip">
+            hacks
+          </span>
+          <span class="main-link">
+            <a href="/hardware" class="btn btn-cus btn-2">hardware</a>
+          </span>
+        </div>
+        <div class="box">
+          <span class="main-descrip">
+            writes a
+          </span>
+          <span class="main-link">
+            <a href="http://blog.kaiyilee.com" class="btn btn-cus btn-3">blog</a>
+          </span>
+        </div>
+        <div class="box">
+          <span class="main-descrip">
+            is easily
+          </span>
+          <span class="main-link">
+            <a href="mailto:kaiyi.lee@u.nus.edu?Subject=Contact%20from%20your%20site" target="_top" 
+            class="btn btn-cus btn-4">contactable</a>
+          </span>
         </div>
       </div>
     </div>
+  </div>
+</div>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          <div class="main-para">
-            <div>in case you were looking, here is his</div>
-            <div>
-              <a class="footer-links" href="/resume.pdf" class="">resume</a>, 
-              <a class="footer-links" href="https://www.linkedin.com/in/kai-yi-lee-89988785/">linkedin</a>, and 
-              <a class="footer-links" href="https://github.com/kaiyisg">github</a>
-            </div>
-          </div>
-        </footer>
+<div class="wrapper-footer">
+  <div class="container">
+    <footer class="footer">
+      <div class="main-para">
+        <div>in case you were looking, here is his</div>
+        <div>
+          <a class="footer-links" href="/resume.pdf" class="">resume</a>, 
+          <a class="footer-links" href="https://www.linkedin.com/in/kai-yi-lee-89988785/">linkedin</a>, and 
+          <a class="footer-links" href="https://github.com/kaiyisg">github</a>
+        </div>
       </div>
-    </div>
-
-    {% include analytics.html %}
-  </body>
-</html>
+    </footer>
+  </div>
+</div>
