--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,15 +17,45 @@
   </head>
 
   <body>
-    <!-- <div class="wrapper-masthead">
+
+    <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
         </header>
       </div>
-    </div> -->
+    </div>
+
+    <div class="row center-xs">
+      <div class="col-xs-12">
+        <div class="box">
+          <div class="main-name">
+            <a class="header-name" href="http://www.kaiyilee.com">
+              Kai Yi <span id="surname">LEE</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div id="main" role="main" class="container">
-      {{ content }}
+      <div class="main-container">
+        {{ content }}
+      </div>
+    </div>
+
+    <div class="wrapper-footer">
+      <div class="container">
+        <footer class="footer">
+          <div class="main-para">
+            <div>in case you were looking, here is his</div>
+            <div>
+              <a class="footer-links" href="/resume.pdf" class="">resume</a>, 
+              <a class="footer-links" href="https://www.linkedin.com/in/kai-yi-lee-89988785/">linkedin</a>, and 
+              <a class="footer-links" href="https://github.com/kaiyisg">github</a>
+            </div>
+          </div>
+        </footer>
+      </div>
     </div>
 
     {% include analytics.html %}
