--- a/style.scss
+++ b/style.scss
@@ -123,7 +123,7 @@ body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
   margin: 0 0 100px; /* bottom = footer height */
-  padding: 25px;
+  // padding: 25px;
 }
 
 .container {
@@ -357,6 +357,10 @@ nav {
   }
 }
 
+.header-name {
+  color: black;
+}
+
 .main-link {
   font-size: 25px;
   font-weight: bold;
@@ -447,6 +451,42 @@ nav {
 .container-elip {
   margin-top: 100px
 }
+
+
+.card {
+  margin: 12%;
+  border-width: 1px;
+  border-style: solid;
+  border-top: none;
+  border-color: #7E7E7E;
+  height: 635px;
+  width: 75%;
+}
+
+.card-header {
+  color: white;
+  height: 50px;
+  background-color: #2c2c2c;
+}
+
+.card-img-container {
+  height: 250px;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+}
+
+.card-description {
+  margin: 5%;
+}
+
+.card-links {
+  margin: 5%;
+  text-align: center;
+}
+
 
 footer {
   padding: 20px 0;
