--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -8,46 +8,34 @@ layout: default
           <div class="col-xs-12 col-md-6 col-lg-4">        
             <div class="box">
               <div class='card'>
+
                 <div class='card-header'>
                   <div class='center-vertical'>
-                    <h2>ES6 Cheatsheet</h2>
+                    <h2>{% post.title %}</h2>
                   </div>
                 </div>
+
                 <div class='card-img-container'>
-                  <img src='img/es6.jpg' height='100%' width='100%'>
+                  <img src='/images/devpost.png' height='100%' width='100%'>
                 </div>
 
                 <div class='card-description'>
-                  An ES6 Cheatsheet containing tips, tricks and best practices, based on my <a href='https://www.youtube.com/watch?v=mies4elKBa4' target='_blank' style="color:#ff6961;">node.js meetup talk</a>. Code snippets provide ES5 -> ES6 Equivalents.
+                  {% post.description %}
                 </div>
 
-                <div class='pure-g'>
-                  <div class='pure-u-1-2'>
+                <div class='row'>
+                  <div class='col-xs-6'>
                     <div class='card-links'>
-                      <button class='button'><a href="https://github.com/DrkSephy/es6-cheatsheet" target='_blank'>Source</a></button>
+                      <button class='button'><img src='/images/devpost.png' height='100%' width='100%'></button>
                     </div>
                   </div>
-                  <div class='pure-u-1-2'>
+                  <div class='col-xs-6'>
                     <div class='card-links'>
-                      <button class='button'><a href="https://www.youtube.com/watch?v=mies4elKBa4" target='_blank'>Video</a></button>
+                      <button class='button'><img src='/images/github.png' height='100%' width='100%'></button>
                     </div>
                   </div>
                 </div>
 
-                <div class='pure-g'>
-                  <div class='pure-u-1-2'>
-                    <div class='card-links'>
-                      <div class='card-links'>
-                        <iframe src="https://ghbtns.com/github-btn.html?user=drksephy&repo=es6-cheatsheet&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                      </div>
-                    </div>
-                  </div>
-                  <div class='pure-u-1-2'>
-                    <div class='card-links'>
-                      <iframe src="https://ghbtns.com/github-btn.html?user=drksephy&repo=es6-cheatsheet&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
