--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,12 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/flexboxgrid.min.css" type="text/css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/flexboxgrid.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.9/components/card.min.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Judson" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Judson" rel="stylesheet" />
 
   </head>
 
