--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -2,44 +2,68 @@
 layout: default
 ---
 <div class="row">
-    {% for post in site.posts %}
-      {% for category in post.categories %}
-        {% if category == 'Hardware' %}  
-          <div class="col-xs-12 col-md-6 col-lg-4">        
-            <div class="box">
-              <div class='card'>
-
-                <div class='card-header'>
-                  <div class='center-vertical'>
-                    <h2>{% post.title %}</h2>
+  {{ content }}
+</div>
+<div class="ui link cards">
+{% for post in site.posts %}
+  {% for category in post.categories %}
+    {% if category == 'Hardware' %} 
+      <div class="card">
+        <div class="image">
+          <img src="/images/devpost.png">
+        </div>
+        <div class="content">
+          <div class="header">{{ post.title }}</div>
+          <!-- <div class="meta">
+            <a>Friends</a>
+          </div> -->
+          <div class="description">
+            {{ post.description }}
+          </div>
+        </div>
+        <div class="extra content">
+          <button class='button'><img src='/images/devpost.png' width='40px'></button>
+          <button class='button'><img src='/images/github.png' width='40px'></button>
+        </div>
+      </div>
+    {% endif %}
+  {% endfor %}
+{% endfor %}
+</div>
+<!-- <div class="row">
+  {% for post in site.posts %}
+    {% for category in post.categories %}
+      {% if category == 'Hardware' %}  
+        <div class="col-xs-12 col-md-6 col-lg-4">        
+          <div class="box">
+            <div class='card'>
+              <div class='card-header'>
+                <div class='center-vertical'>
+                  <h2>{{ post.title }}</h2>
+                </div>
+              </div>
+              <div class='card-img-container'>
+                <img src='/images/devpost.png' height='100%' width='100%'>
+              </div>
+              <div class='card-description'>
+                {{ post.description }}
+              </div>
+              <div class='row'>
+                <div class='col-xs-6'>
+                  <div class='card-links'>
+                    <button class='button'><img src='/images/devpost.png' height='100%' width='100%'></button>
                   </div>
                 </div>
-
-                <div class='card-img-container'>
-                  <img src='/images/devpost.png' height='100%' width='100%'>
-                </div>
-
-                <div class='card-description'>
-                  {% post.description %}
-                </div>
-
-                <div class='row'>
-                  <div class='col-xs-6'>
-                    <div class='card-links'>
-                      <button class='button'><img src='/images/devpost.png' height='100%' width='100%'></button>
-                    </div>
-                  </div>
-                  <div class='col-xs-6'>
-                    <div class='card-links'>
-                      <button class='button'><img src='/images/github.png' height='100%' width='100%'></button>
-                    </div>
+                <div class='col-xs-6'>
+                  <div class='card-links'>
+                    <button class='button'><img src='/images/github.png' height='100%' width='100%'></button>
                   </div>
                 </div>
-
               </div>
             </div>
           </div>
-        {% endif %}
-      {% endfor %}
+        </div>
+      {% endif %}
     {% endfor %}
-</div>
+  {% endfor %}
+</div> -->
