--- a/style.scss
+++ b/style.scss
@@ -452,39 +452,8 @@ nav {
   margin-top: 100px
 }
 
-
-.card {
-  margin: 12%;
-  border-width: 1px;
-  border-style: solid;
-  border-top: none;
-  border-color: #7E7E7E;
-  height: 635px;
-  width: 75%;
-}
-
-.card-header {
-  color: white;
-  height: 50px;
-  background-color: #2c2c2c;
-}
-
-.card-img-container {
-  height: 250px;
-}
-
-.card-img {
-  width: 100%;
-  height: 100%;
-}
-
-.card-description {
-  margin: 5%;
-}
-
-.card-links {
-  margin: 5%;
-  text-align: center;
+.ui.cards>.card {
+  max-height: 450px;
 }
 
 
