--- a/_includes/related.html
+++ b/_includes/related.html
@@ -2,8 +2,8 @@
 
 <h4>Other similar hacks include: </h4> 
 
-<div class="ui link cards">
-{% assign maxRelated = 3 %}
+<div class="ui six doubling cards">
+{% assign maxRelated = 6 %}
 {% assign minCommonTags =  1 %}
 {% assign maxRelatedCounter = 0 %}
 
@@ -23,7 +23,12 @@
     {% endfor %}
 
     {% if sameTagCount >= minCommonTags %}
-      {% include card.html post=post %}
+      <a class="ui card" href="{{ post.url | prepend: site.baseurl }}">
+        <div class="image">
+          {% assign image = post.images[0] %}
+          {% include image.html image=image %}
+        </div>
+      </a>
       {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
       {% if maxRelatedCounter >= maxRelated %}
         {% break %}
