Change style of image background

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,5 +1,5 @@
 <a class="ui card" href="{{ post.url | prepend: site.baseurl }}">
-  <div class="image">
+  <div class="image image-post">
     {% assign image = post.images[0] %}
     {% include image.html image=image %}
   </div>
