Fix contact me form

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -35,8 +35,9 @@ layout: default
         is easily
       </span>
       <span class="main-link">
-        <a href="mailto:kaiyi.lee@u.nus.edu?Subject=Contact%20from%20your%20site" target="_top" 
-        class="btn btn-cus btn-4">contactable</a>
+        <a href="/contact" class="btn btn-cus btn-4">contactable</a>
+        <!-- <a href="mailto:kaiyi.lee@u.nus.edu?Subject=Contact%20from%20your%20site" target="_top" 
+        class="btn btn-cus btn-4">contactable</a> -->
       </span>
     </div>
   </div>
