Finish adding blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,6 +55,11 @@ layout: default
                 <img class="ui image" src='/images/youtube.png'>
               </a>
             {% endif %}
+            {% if page.facebook %}
+              <a href="{{ page.facebook }}">
+                <img class="ui image" src='/images/facebook.png'>
+              </a>
+            {% endif %}
           </div>
         </div>
       </div>
