--- a/style.scss
+++ b/style.scss
@@ -128,8 +128,8 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 926px;
-  padding: 0 10px;
+  max-width: 970px;
+  padding: 0 2.2rem;
   width: 100%;
 }
 
