--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,8 @@
           <div class="main-para">
             <div>in case you were looking, here is his</div>
             <div>
-              <a class="footer-links" href="/resume.pdf" class="">resume</a>, 
-              <a class="footer-links" href="https://www.linkedin.com/in/kai-yi-lee-89988785/">linkedin</a>, and 
+              <a class="footer-links" href="/resume.pdf" class="">resume</a>,
+              <a class="footer-links" href="https://www.linkedin.com/in/kai-yi-lee/">linkedin</a>, and 
               <a class="footer-links" href="https://github.com/kaiyisg">github</a>
             </div>
           </div>
